# dirstamp

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
src/: main.rs
