[package]
name        = "dirstamp"
version     = "0.1.4"
edition     = "2021"                       # 2024 edition is still nightly-only
description = "Sync a directory's modified time to its newest contained item."
readme      = "README.md"
license     = "MIT"
repository  = "https://github.com/Crinklebine/dirstamp"
homepage    = "https://github.com/Crinklebine/dirstamp"
keywords    = ["timestamp", "folder", "cli", "filesystem"]
categories  = ["filesystem", "command-line-utilities"]

# Optional: avoid uploading large or binary test data
exclude = ["assets/*", "test/*", "**/*.zip"]

[dependencies]
walkdir  = "2"
filetime = "0.2"
time = { version = "0.3.41", features = ["formatting"] }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
